--- a/Arrays/LC_1752.md
+++ b/Arrays/LC_1752.md
@@ -4,8 +4,8 @@
 
 ## 🔗 Problem & Resources
 
-* **Problem Link:** [Link to the problem on LeetCode, HackerRank, etc.](https://leetcode.com/problems/check-if-array-is-sorted-and-rotated/)
-* **Handwritten Notes:** [Link to your scanned notes (e.g., Google Drive, Notion, Imgur)](LC_1752.jpg)
+* **Problem Link:** [Leetcode](https://leetcode.com/problems/check-if-array-is-sorted-and-rotated/)
+* **Handwritten Notes:** [Notes](https://github.com/aryan-0102/CPP/blob/main/Arrays/Handwritten/LC_1752.jpg)
 
 ---
 
