--- a/Arrays/LC74.md
+++ b/Arrays/LC74.md
@@ -1,3 +1,31 @@
+# 2D Matrix - [Array]
+
+---
+
+## 🔗 Problem & Resources
+
+* **Problem Link:** [Leetcode](https://leetcode.com/problems/search-a-2d-matrix/)
+* **Handwritten Notes:** [Notes](https://github.com/aryan-0102/CPP/blob/main/Arrays/Handwritten/LC_74.jpg)
+
+---
+
+## 🤔 My Approach & Intuition
+
+### Data Structure(s) Used
+
+* **[Array]:**
+
+
+
+## ⚙️ Complexity Analysis
+
+* **Time Complexity:** $O(Log(M+N)$
+    * **Space Complexity:** $O(1)$
+    ---
+
+## 💻 Code Implementation
+
+``````cpp
 class Solution {
 public:
     bool searchMatrix(vector<vector<int>>& matrix, int target) {
